# fastapi-ws-shutdown

./: .gitignore  Dockerfile  README.md  docker-compose.yml  lint.sh  pyproject.toml
app/: config.py  graceful_shutdown.py  main.py  periodic_sender.py  redis_listener.py  ws_manager.py
